# SiTT

./: .gitignore  README.md  example_config.yaml  pyproject.toml  requirements.txt  requirements_extras.txt
best_paths/: best_paths.py  best_paths_experiments.py
data/: README.md  create_fresh_snow_of_last_x_hours_from_5era_data.py  create_interpolated_weather_data.py  create_median_heights_from_era5_data.py  create_rain_sum_of_last_x_hours_from_5era_data.py  create_temperature_deviation_for_edges.py  get_era5_data.py  merge_era5_data.py  merge_geosphere_data.py  verify_station_data_austria_vs_era5.ipynb
examples/: 01_basic_tutorial.ipynb  README.md  basic_example.ipynb  calculate_lake_routes.py  calculate_river_depths.py  calculate_river_flows.py  calculate_river_inclination.py  calculate_river_slopes.py  calculate_river_slopes_test_segments.py  calculate_river_widths.py  calculate_river_widths_variants.py  check_river_routes.py  check_routes.py  create-database.sql  create_river_segments.py  create_river_shores.py  create_sql_from_dump.py  create_statistics_for_all_routes.py  example_graph.pkl  import_shape_depths_folder.py  raster_river_profiles.py  read_shape_file_into_db.py  river_create_depths.ipynb  river_create_grid.ipynb  river_directions.ipynb  river_slopes.ipynb  set_height_hubs.py  simple_river_test_simulator.py  validate_river_directions.py  validate_river_routes.py  xyz_data_to_shp.py  xyz_data_to_shp_folder.py
lake_preparation/: lake_insert.sql  prepare_lakes.py
precalculation/: 00_make_xyz.py  01_import_hubs.py  02_import_roads.py  03_import_lakes.py  04_import_rivers.py  05_mark_possible_overnight_stays.py  README.md  common.py  connect_lake_harbors.py  convert_base_river_networks_to_edges.py  convert_rivers_to_edges.py  convert_roads_to_edges.py  convert_water_bodies_to_parts.py  convert_water_bodies_to_parts_nogeos.py  create_base_river_networks.py  import_hubs_roads.py  import_hubs_roads_rivers.py  import_hubs_roads_with_geotiff.py  import_rec_data.py  import_water_data.md  make_geo_data_xyz.py  path_weeder.py  precalculate_graph_directions.py  prepare_water_depths.py  river_segmentation.md
precalculation/old_files/: README.md  convert_base_river_networks_to_edges.py  convert_water_bodies_to_parts_nogeos.py  import_water_data.md
precalculation_old/: README.md  convert_rivers_to_edges.py  create_base_river_networks.py  prepare_water_depths.py
preparation/: README.md  extremity_path_finder_test.py  path_weeder.py  read_pickled_graph.py  segmentize_rivers.md  segmentize_rivers.py  segmentize_waterbodies.md  segmentize_waterbodies.py
readmes/: concept.md  database.md  database_schema.sql  postgres_schemata.md  water_data.md
readmes/old_concepts/: README.md  convert_water_bodies_to_parts.py  precalculate_graph_directions.py  river_segmentation.md
sitt/: __about__.py  __init__.py  __main__.py  base.py  cl.py  convert_graph_to_directed.py  core.py  loaders.py  sim_runner.py  spatio_temporal_data.py  utils.py
sitt/lib/: __init__.py  adjacency_list.py  compact_graph.py  graph_to_shapefile.py  path_weeder.py
sitt/modules/output/: json_output.py
sitt/modules/preparation/: __init__.py  calculate_paths_and_hubs.py  create_routes.py  debug_display_paths_and_hubs.py  debug_statistics.py  geotiff_create_segmented_paths.py  geotiff_height_for_paths_and_hubs.py  geotiff_height_for_roads_and_hubs.py  graph_load.py  load_data_from_netcdf.py  post_clean_raw_data.py  prune_dead_end_overnight_hubs.py  psql_base.py  psql_calculate_river_widths.py  psql_construct_river_paths.py  psql_read_paths_and_hubs.py  psql_read_roads_and_hubs.py  psql_save_paths_and_hubs.py  psql_save_roads_and_hubs.py
sitt/modules/simulation/: __init__.py  dummy.py  dummy_runner.py  simple_runner.py
sitt/modules/simulation_day_hooks/: __init__.py  create_means_of_transportation.py  log_agents_per_day.py  persist_agents_after_day.py  persist_agents_to_csv.py  persist_agents_to_geopackage.py  persist_agents_to_spatialite.py  persist_routes_to_geopackage_and_csv.py  prune_agent_list.py  remove_dangling_agents.py  start_stop_time_preparation.py
sitt/modules/simulation_define_state/: __init__.py  simple_loading_state.py
sitt/modules/simulation_pre_post_prepare_day/: __init__.py  prune_agent_list.py  remove_dangling_agents.py
sitt/modules/simulation_prepare_day/: __init__.py  start_stop_time_preparation.py
sitt/modules/simulation_step/: __init__.py  cached_dav.py  cached_dav_river.py  cached_interface.py  cached_lake.py  dummy_fixed_speed.py  dummy_for_tests.py  simple.py  simple_dav.py  simple_dav_river.py  simple_lake.py  simple_river.py  simple_with_environment.py
tests/: test.nc  test_base_Agent.py  test_base_SpaceTimeData.py  test_core_Simulation.py
tests/helpers/: prepare_test_database.py
(+11 files in other folders)
