[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sitt"
description = 'Si.T.T. (Simulation of Traffic and Transport) is an agent-based simulation for pre-industrial trade routes.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["simulation", "history", "university", "trade", "ancient"]
authors = [
  { name = "Maximilian Kalus", email = "info@auxnet.de" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/sitt#readme"
Issues = "https://github.com/unknown/sitt/issues"
Source = "https://github.com/unknown/sitt"

[tool.hatch.version]
path = "sitt/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.idea",
  "/.vscode",
  "/.git",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=sitt --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "sitt/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
