[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "sitt"
description = "Si.T.T. (Simulation of Traffic and Transport) is an agent-based simulation for pre-industrial trade routes."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
keywords = ["simulation", "history", "university", "trade", "ancient"]
authors = [
    { name = "Maximilian Kalus", email = "info@auxnet.de" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "cdsapi>=0.7.7",
    "dask>=2025.11.0",
    "extremitypathfinder[numba]~=2.7.1",
    "fiona>=1.10.1",
    "geoalchemy2>=0.18.1",
    "geopandas>=1.1.1",
    "igraph>=1.0.0",
    "matplotlib>=3.10.7",
    "nanoid>=2.0.0",
    "netcdf4>=1.7.3",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyproj>=3.7.2",
    "pyshp>=3.0.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
    "shapely>=2.1.2",
    "sortedcontainers>=2.4.0",
    "sqlalchemy>=2.0.45",
    "suntime>=1.3.2",
    "timezonefinder>=8.1.0",
    "xarray>=2025.12.0",
]

[project.optional-dependencies]
dev = [
    "pandas-stubs~=2.3.3",
    "pytest>=8.4.2",
]

[project.urls]
Documentation = "https://github.com/Simulation-of-Traffic-and-Transport/SiTT#readme"
Issues = "https://codeberg.org/SiTT/SiTT/issues"
Source = "https://codeberg.org/SiTT/SiTT"

[tool.hatch.version]
path = "sitt/__about__.py"
#[tool.hatch.metadata.hooks.requirements_txt]
#files = ["requirements.txt"]

# automatically checks .gitignore
#[tool.hatch.build.targets.sdist]
#exclude = [
#  "/.idea",
#  "/.vscode",
#  "/.git",
#]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=sitt --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["311", "312"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "sitt/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
